src/objects/Trade_Event_Order__c.object
<CustomObject>
    <description>regarding the promotion management</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>diaplays the date of event</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>displays the location</description>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests__c</fullName>
        <label>Number of Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approval requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Event_Name__c</fullName>
        <description>displays the trade event name</description>
        <label>Trade Event Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Trade Event Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TO-{0000}</displayFormat>
        <label>Trade Event Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Event Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>